crates/testscribe/tests/ui/clone_one_option.rs
use testscribe::testscribe;

#[testscribe(cloneable, cloneable_async)]
fn my_test() {
    then!("");
}

fn main() {}